--- a/styles/style.css
+++ b/styles/style.css
@@ -15,7 +15,7 @@ header {
   /* background-color: cornsilk; */
 }
 button {
-  background-color: cornflowerblue;
+  background-color: slateblue;
   border-radius: 5px;
   padding: 5px;
 }
@@ -36,13 +36,61 @@ h2 {
 .items {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-row-gap: 30px;
+  grid-row-gap: 40px;
 }
 .item {
-  background-color: darkkhaki;
+  background-color: #ffff;
+  box-shadow: 10px 10px 10px 10px rgba(174, 218, 218, 0.397);
 
   padding: 10px;
 
   width: 329px;
   height: 476px;
+}
+.fas fa-star,
+.fill {
+  color: goldenrod;
+}
+
+h5 {
+  text-align: right;
+  margin: 15px;
+  padding: 25px;
+  color: darkmagenta;
+}
+.course {
+  display: flex;
+  justify-content: space-between;
+  margin: 5%;
+}
+.detail {
+  width: 40%;
+}
+course-pic {
+  width: 40%;
+}
+footer {
+  margin: 0;
+  height: 150px;
+  background-color: slateblue;
+}
+.footer-content {
+  /* background-color: black; */
+  color: white;
+  text-align: center;
+}
+.footer-content h2 {
+  padding-bottom: 0px;
+  padding-top: 20px;
+}
+.footer-content h6 {
+  margin-bottom: 0px;
+  margin-top: 0px;
+}
+
+.footer-icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* background: chartreuse; */
 }
