--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,7 @@
+/* Google font - Poppins import */
+
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,500;1,500&display=swap");
+
 body {
   font-family: "Poppins", sans-serif;
   /* background-color: cornflowerblue; */
@@ -17,14 +20,21 @@ header {
   margin-right: 5%;
 }
 button {
-  background-color: slateblue;
-  border-radius: 5px;
+  background-color: #e02c6d;
+  height: 36px;
+  width: 150px;
+  border-radius: 18px;
+  border: 0;
   padding: 3px 10px;
   color: white;
 }
 .picture {
   width: 440px;
   height: 414px;
+}
+.picture:hover {
+  transform: scale(1.25);
+  transition: transform 2s ease-in-out;
 }
 /* colection section */
 .collection {
@@ -43,7 +53,8 @@ h2 {
 }
 .item {
   background-color: #ffff;
-  box-shadow: 10px 10px 10px 10px rgba(174, 218, 218, 0.397);
+  box-shadow: 2px 2px 10px rgba(174, 218, 218, 0.397);
+  /* box-shadow: 5px 5px 10px whitesmoke; */
 
   padding: 10px;
 
@@ -63,7 +74,7 @@ h5 {
   text-align: right;
   margin: 15px;
   padding: 25px;
-  color: darkmagenta;
+  color: #e02c6d;
 }
 /* course section */
 .course {
@@ -83,7 +94,7 @@ course-pic {
 footer {
   margin: 0;
   height: 150px;
-  background-color: slateblue;
+  background-color: rgb(19, 18, 18);
   margin-top: 50px;
 }
 .footer-content {
