--- a/styles/style.css
+++ b/styles/style.css
@@ -4,15 +4,17 @@
 
 body {
   font-family: "Poppins", sans-serif;
-  /* background-color: cornflowerblue; */
   margin: 0;
 }
+
 /* header */
+
 header {
   margin: 5%;
 }
-/* main part */
-/* intro section */
+
+/* Body main - intro section */
+
 .intro {
   display: flex;
   justify-content: space-between;
@@ -36,7 +38,9 @@ button {
   transform: scale(1.25);
   transition: transform 2s ease-in-out;
 }
+
 /* colection section */
+
 .collection {
   margin-left: 8%;
   margin-right: 8%;
@@ -54,29 +58,25 @@ h2 {
 .item {
   background-color: #ffff;
   box-shadow: 2px 2px 30px rgba(174, 218, 218, 0.397);
-  /* box-shadow: 5px 5px 10px whitesmoke; */
-
   padding: 20px;
-
   width: 300px;
   height: 476px;
 }
-/* .fas fa-star, */
 .fill {
   color: goldenrod;
 }
-/* .fas fa-star, */
 .nofill {
   color: grey;
 }
-
 h5 {
   text-align: right;
   margin: 15px;
   padding: 25px;
   color: #e02c6d;
 }
+
 /* course section */
+
 .course {
   display: flex;
   justify-content: space-between;
@@ -92,7 +92,9 @@ course-pic {
   width: 380px;
   height: 235px;
 }
+
 /* Footer part */
+
 footer {
   background-color: #0a0826;
   margin-top: 50px;
@@ -106,7 +108,6 @@ footer {
   padding-top: 20px;
   font-size: 20px;
   font-weight: 100;
-
   margin: 0px;
 }
 .footer-content p {
@@ -120,14 +121,15 @@ footer {
   justify-content: center;
   align-items: center;
 }
-
 p .fa-twitter-square,
 .fa-facebook,
 .fa-youtube,
 .fa-instagram-square {
   padding-right: 10px;
 }
+
 /* Media Query - Small Device */
+
 @media only screen and (max-width: 688px) {
   .intro {
     display: flex;
@@ -142,7 +144,9 @@ p .fa-twitter-square,
     flex-direction: column;
   }
 }
+
 /* Media Query - Medium Device */
+
 @media only screen and (min-width: 689px) and (max-width: 992px) {
   .items {
     display: grid;
